--- a/docker/engine/templates/systemd-opts.jinja
+++ b/docker/engine/templates/systemd-opts.jinja
@@ -2,7 +2,7 @@
 
 [Service]
 ExecStart=
-ExecStart=/usr/bin/docker daemon -H fd:// 
+ExecStart=/usr/bin/docker daemon 
 {%- for key, value in engine.get("opts").iteritems() -%}
 {% for opt in value %} --{{ key }}={{ opt }}{% endfor %}
 {%- endfor -%}
